-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 23
-
Component/s: hotspot
-
b14
-
riscv
-
linux
Build Config: `bash configure --with-debug-level=release --with-jvm-variants=minimal --with-zlib=system --with-native-debug-symbols=internal --with-boot-jdk=/home/zifeihan/jre/jre21`
Error log for minimal build:
```
Creating support/modules_libs/java.base/minimal/libjvm.so from 591 file(s)
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp: In member function ‘u_char* StubGenerator::Sha2Generator::generate_sha2_implCompress(Assembler::SEW, bool)’:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp:3938:41: error: ‘MaxVectorSize’ was not declared in this scope; did you mean ‘MaxNewSize’?
3938 | if (vset_sew == Assembler::e64 && MaxVectorSize == 16) { // SHA512 and VLEN = 128
| ^~~~~~~~~~~~~
| MaxNewSize
gmake[3]: *** [lib/CompileJvm.gmk:165: /home/zifeihan/jdk/build/linux-riscv64-minimal-release/hotspot/variant-minimal/libjvm/objs/stubGenerator_riscv.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [make/Main.gmk:253: hotspot-minimal-libs] Error 2
gmake[2]: *** Waiting for unfinished jobs....
^@
ERROR: Build failed for target 'images' in configuration 'linux-riscv64-minimal-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-minimal_libjvm_objs_stubGenerator_riscv.o:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp: In member function ‘u_char* StubGenerator::Sha2Generator::generate_sha2_implCompress(Assembler::SEW, bool)’:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp:3938:41: error: ‘MaxVectorSize’ was not declared in this scope; did you mean ‘MaxNewSize’?
3938 | if (vset_sew == Assembler::e64 && MaxVectorSize == 16) { // SHA512 and VLEN = 128
| ^~~~~~~~~~~~~
| MaxNewSize
* All command lines available in /home/zifeihan/jdk/build/linux-riscv64-minimal-release/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
HELP: Try searching the build log for '] Error'.
HELP: Run 'make doctor' to diagnose build problems.
make[1]: *** [/home/zifeihan/jdk/make/Init.gmk:323: main] Error 2
make: *** [/home/zifeihan/jdk/make/Init.gmk:189: images] Error 2
```
Error log for minimal build:
```
Creating support/modules_libs/java.base/minimal/libjvm.so from 591 file(s)
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp: In member function ‘u_char* StubGenerator::Sha2Generator::generate_sha2_implCompress(Assembler::SEW, bool)’:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp:3938:41: error: ‘MaxVectorSize’ was not declared in this scope; did you mean ‘MaxNewSize’?
3938 | if (vset_sew == Assembler::e64 && MaxVectorSize == 16) { // SHA512 and VLEN = 128
| ^~~~~~~~~~~~~
| MaxNewSize
gmake[3]: *** [lib/CompileJvm.gmk:165: /home/zifeihan/jdk/build/linux-riscv64-minimal-release/hotspot/variant-minimal/libjvm/objs/stubGenerator_riscv.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [make/Main.gmk:253: hotspot-minimal-libs] Error 2
gmake[2]: *** Waiting for unfinished jobs....
^@
ERROR: Build failed for target 'images' in configuration 'linux-riscv64-minimal-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-minimal_libjvm_objs_stubGenerator_riscv.o:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp: In member function ‘u_char* StubGenerator::Sha2Generator::generate_sha2_implCompress(Assembler::SEW, bool)’:
/home/zifeihan/jdk/src/hotspot/cpu/riscv/stubGenerator_riscv.cpp:3938:41: error: ‘MaxVectorSize’ was not declared in this scope; did you mean ‘MaxNewSize’?
3938 | if (vset_sew == Assembler::e64 && MaxVectorSize == 16) { // SHA512 and VLEN = 128
| ^~~~~~~~~~~~~
| MaxNewSize
* All command lines available in /home/zifeihan/jdk/build/linux-riscv64-minimal-release/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
HELP: Try searching the build log for '] Error'.
HELP: Run 'make doctor' to diagnose build problems.
make[1]: *** [/home/zifeihan/jdk/make/Init.gmk:323: main] Error 2
make: *** [/home/zifeihan/jdk/make/Init.gmk:189: images] Error 2
```
- relates to
-
JDK-8319716 RISC-V: Add SHA-2
-
- Resolved
-