8327283: RISC-V: Minimal build failed after JDK-8319716